unpackaged/main/default/objects/Save_Tactics__c/Save_Tactics__c.object-meta.xml
<CustomObject>
    <label>Save Tactics</label>
    <nameField>
        <displayFormat>ST{0000}</displayFormat>
        <label>Save Tactics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Save Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>