unpackaged/main/default/objects/Save_Tactics__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Save Tactics</relationshipLabel>
    <relationshipName>Save_Tactics</relationshipName>
    <type>Lookup</type>
</CustomField>