unpackaged/main/default/objects/Save_Tactics__c/fields/Save_Tactic_Sub_Detail__c.field-meta.xml
<CustomField>
    <fullName>Save_Tactic_Sub_Detail__c</fullName>
    <label>Save Tactic Sub Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Save_Tactics__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educate on NEW features / add-ons</fullName>
            </value>
            <value>
                <fullName>Design Refresh/Custom Website</fullName>
            </value>
            <value>
                <fullName>Change in Services</fullName>
            </value>
            <value>
                <fullName>Free Additional Service</fullName>
            </value>
            <value>
                <fullName>Upgrade Plan</fullName>
            </value>
            <value>
                <fullName>Upsell Add-on</fullName>
            </value>
            <value>
                <fullName>Design Refresh/CWO</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Update Current Terms</fullName>
            </value>
            <value>
                <fullName>Partial Credit</fullName>
            </value>
            <value>
                <fullName>Monthly Service Credit</fullName>
            </value>
            <value>
                <fullName>Temporary Lower MRR</fullName>
            </value>
            <value>
                <fullName>Lower MRR</fullName>
            </value>
            <value>
                <fullName>Downgrade Plan</fullName>
            </value>
            <value>
                <fullName>Pause Partial Service</fullName>
            </value>
            <value>
                <fullName>Pause Full Service</fullName>
            </value>
            <value>
                <fullName>Temporary Pause</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Full Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>