unpackaged/main/default/objects/Save_Tactics__c/fields/Save_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Save_Tactics__c</fullName>
    <label>Save Tactics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listen/Education</fullName>
            </value>
            <value>
                <fullName>Provide Free Service</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Update Contract Terms</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Reduced MRR</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>